--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,12 +51,15 @@ ul {
 }
 
 .header-logo {
-  width: 50%;
+  width: 100%;
   max-width: 260px;
   display: block;
 }
 
 .header-logo-row {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
