--- a/static/css/source/style.scss
+++ b/static/css/source/style.scss
@@ -493,3 +493,134 @@ ul {
         }
     }
 }
+
+
+.payment-receipt {
+    display: block;
+    width: 100%;
+    
+    &-inner {
+        width: 90%;
+        max-width: 1100px;
+        margin: 0 auto;
+        padding: 4em 2em;
+        min-height: 70vh;
+    }
+    
+    &-box {
+        width: 100%;
+        max-width: 400px;
+        margin: 0 auto;
+        padding: 2em;
+        background-color: rgba($color: #000000, $alpha: 0.5);
+    
+        h3 {
+            font-size: 2em;
+            text-transform: uppercase;
+            font-weight: 700;
+            font-family: 'Oswald', sans-serif;
+            letter-spacing: 1px;
+
+            span {
+                color: #9ef34e;
+            }
+        }
+
+        p {
+            font-size: 1em;
+            margin-top: 0.5em;
+        }
+    }
+
+}
+
+
+.login-box {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 4em;
+
+    &-inner {
+        width: 90%;
+        max-width: 400px;
+        background-color: rgba($color: #000000, $alpha: 0.3);
+        padding: 4em;
+
+        .header-logo-row {
+            margin-bottom: 2em;
+        }
+    }
+
+    .login-input-row {
+        display: flex;
+        flex-direction: column;
+        margin: 1em 0;
+
+        label {
+            font-weight: 400;
+            font-family: 'Oswald', sans-serif;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-size: 0.9em;
+            opacity: 0.8;
+            margin-bottom: 0.4em;
+        }
+
+        i {
+            color: #feffd0;
+            opacity: 0.8;
+            margin-right: 0.2em;
+        }
+        
+        input {
+            font-size: 1.1em;
+            font-family: inherit;
+            font-weight: 400;
+            padding: 0.5em 1em;
+            color: #ffffff;
+            background-color: rgba($color: #ffffff, $alpha: 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            outline: none;
+
+            &:focus {
+                border-color: #ee344a;
+            }
+        }
+    }
+
+    .login-input-button {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin-top: 1em;
+        
+        button {
+            font-size: 0.9em;
+            font-family: 'Oswald', sans-serif;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            color: #f3f3f3;
+            background: linear-gradient(#ee344a, #cc172d);
+            padding: 0.4em 1em 0.5em 1em;
+            display: block;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            cursor: pointer;
+            outline: none;
+        }
+    }
+
+}
+
+.message {
+    width: 100%;
+    padding: 0.5em;
+    font-size: 0.9em;
+}
+.message-error {
+    background-color: #ee344a;
+}
+.message-success {
+    background-color: #9ef34e;
+    color: #1d2329;
+}
