--- a/static/css/style.css
+++ b/static/css/style.css
@@ -538,4 +538,147 @@ ul {
   padding: 0.7em 1em;
   opacity: 0.7;
 }
+
+.payment-receipt {
+  display: block;
+  width: 100%;
+}
+
+.payment-receipt-inner {
+  width: 90%;
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 4em 2em;
+  min-height: 70vh;
+}
+
+.payment-receipt-box {
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 2em;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.payment-receipt-box h3 {
+  font-size: 2em;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-family: 'Oswald', sans-serif;
+  letter-spacing: 1px;
+}
+
+.payment-receipt-box h3 span {
+  color: #9ef34e;
+}
+
+.payment-receipt-box p {
+  font-size: 1em;
+  margin-top: 0.5em;
+}
+
+.login-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  padding: 4em;
+}
+
+.login-box-inner {
+  width: 90%;
+  max-width: 400px;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 4em;
+}
+
+.login-box-inner .header-logo-row {
+  margin-bottom: 2em;
+}
+
+.login-box .login-input-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 1em 0;
+}
+
+.login-box .login-input-row label {
+  font-weight: 400;
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 0.9em;
+  opacity: 0.8;
+  margin-bottom: 0.4em;
+}
+
+.login-box .login-input-row i {
+  color: #feffd0;
+  opacity: 0.8;
+  margin-right: 0.2em;
+}
+
+.login-box .login-input-row input {
+  font-size: 1.1em;
+  font-family: inherit;
+  font-weight: 400;
+  padding: 0.5em 1em;
+  color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  outline: none;
+}
+
+.login-box .login-input-row input:focus {
+  border-color: #ee344a;
+}
+
+.login-box .login-input-button {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 1em;
+}
+
+.login-box .login-input-button button {
+  font-size: 0.9em;
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: #f3f3f3;
+  background: -webkit-gradient(linear, left top, left bottom, from(#ee344a), to(#cc172d));
+  background: linear-gradient(#ee344a, #cc172d);
+  padding: 0.4em 1em 0.5em 1em;
+  display: block;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  cursor: pointer;
+  outline: none;
+}
+
+.message {
+  width: 100%;
+  padding: 0.5em;
+  font-size: 0.9em;
+}
+
+.message-error {
+  background-color: #ee344a;
+}
+
+.message-success {
+  background-color: #9ef34e;
+  color: #1d2329;
+}
 /*# sourceMappingURL=style.css.map */
