--- a/static/css/source/style.scss
+++ b/static/css/source/style.scss
@@ -16,6 +16,7 @@ body {
     width: 100%;
     margin: 0;
     background-color: #1d2329;
+    min-width: 1100px;
 }
 
 a {
@@ -371,7 +372,7 @@ ul {
     
     &-inner {
         width: 90%;
-        max-width: 400px;
+        max-width: 500px;
         margin: 0 auto;
         padding: 4em 2em;
         display: flex;
@@ -467,6 +468,20 @@ ul {
     color: #ffffff;
     cursor: pointer;
     background: linear-gradient(#ee344a, #cc172d);
+    padding: 0.4em 1em 0.5em 1em;
+    display: block;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.green-button {
+    font-size: 0.8em;
+    text-transform: uppercase;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 700;
+    letter-spacing: 1px;
+    color: #1d2329;
+    cursor: pointer;
+    background: linear-gradient(#9ef34e, #81d82f);
     padding: 0.4em 1em 0.5em 1em;
     display: block;
     border: 1px solid rgba(255, 255, 255, 0.2);
@@ -623,4 +638,203 @@ ul {
 .message-success {
     background-color: #9ef34e;
     color: #1d2329;
+}
+
+.content {
+    width: 100%;
+    min-height: 70vh;
+    display: flex;
+    justify-content: center;
+
+    &-inner {
+        width: 90%;
+        max-width: 1100px;
+        display: block;
+        margin: 0 auto;
+        padding: 2em;
+        background-color: rgba($color: #000000, $alpha: 0.1);
+    
+        .message {
+            margin-bottom: 2em;
+        }
+
+        .red-button, .green-button {
+            margin: 0.2em 0.3em;
+            font-size: 0.7em;
+        }
+    }
+}
+
+table.dataTable thead th, table.dataTable tfoot th {
+    font-weight: 300;
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    font-size: 0.9em;
+}
+
+.dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper .dataTables_paginate {
+    color: #feffd0;
+    font-size: 0.8em;
+}
+table.dataTable tbody tr {
+    background: linear-gradient(#000000, #1d2329);
+}
+.dataTables_wrapper .dataTables_length select {
+    color: #bdbdbd;
+}
+.dataTables_wrapper .dataTables_filter input {
+    color: #ffffff;
+}
+table.dataTable.no-footer {
+    padding: 2em 0;
+}
+
+table.dataTable tbody th, table.dataTable tbody td {
+    border: 1px solid rgba(255,255,255,0.1);
+}
+
+.header-navigation {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+
+    a {
+        font-size: 0.9em;
+        font-weight: 400;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        padding: 0.2em 1em;
+        color: #ffffff;
+
+        &:not(:last-child) {
+            border-right: 1px solid rgba($color: #ffffff, $alpha: 0.2);
+        }
+
+        i {
+            margin-right: 0.3em;
+            opacity: 0.7;
+            color: #feffd0
+        }
+    }
+}
+
+td form {
+    display: inline-block;
+}
+
+
+.setting {
+    border-bottom: 1px solid rgba($color: #ffffff, $alpha: 0.2);
+    
+    .setting-heading {
+        font-size: 1.4em;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        font-family: 'Oswald', sans-serif;
+        color: #ee344a;
+        position: relative;
+        display: inline-block;
+        margin-top: 0.5em;
+
+        &::before {
+            content: "";
+            width: 1em;
+            height: 4px;
+            background-color: #ee344a;
+            position: absolute;
+            top: 50%;
+            right: -1.4em;
+            transform: translateY(-50%);
+        }
+    }
+
+    .setting-input-row {
+        display: flex;
+        flex-direction: column;
+        margin: 1em 0;
+
+        label {
+            font-weight: 400;
+            font-family: 'Oswald', sans-serif;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-size: 0.9em;
+            opacity: 0.8;
+            margin-bottom: 0.4em;
+        }
+
+        i {
+            color: #feffd0;
+            opacity: 0.8;
+            margin-right: 0.2em;
+        }
+        
+        input {
+            font-size: 1.1em;
+            font-family: inherit;
+            font-weight: 400;
+            padding: 0.5em 1em;
+            color: #ffffff;
+            background-color: rgba($color: #ffffff, $alpha: 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            outline: none;
+
+            &:focus {
+                border-color: #ee344a;
+            }
+        }
+    }
+
+    .setting-input-button {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        
+        button {
+            font-size: 0.9em;
+            font-family: 'Oswald', sans-serif;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            color: #f3f3f3;
+            background: linear-gradient(#ee344a, #cc172d);
+            padding: 0.4em 1em 0.5em 1em;
+            display: block;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            cursor: pointer;
+            outline: none;
+        }
+    }
+
+}
+
+
+.popup {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    z-index: 3;
+    background-color: rgba(0, 0, 0, 0.5);
+    left: 0;
+    top: 0;
+    opacity: 0;
+    pointer-events: none;
+    transition: 0.2s all;
+
+    &-content {
+        width: 90%;
+        max-width: calc(400px + 4em);
+        height: auto;
+        background-color: #ffffff;
+        margin: 0 auto;
+        padding: 2em;
+    }
+}
+
+.popup.active {
+    opacity: 1;
+    pointer-events: all;
 }
