--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,7 @@ body {
   width: 100%;
   margin: 0;
   background-color: #1d2329;
+  min-width: 1100px;
 }
 
 a {
@@ -401,7 +402,7 @@ ul {
 
 .buy-inner {
   width: 90%;
-  max-width: 400px;
+  max-width: 500px;
   margin: 0 auto;
   padding: 4em 2em;
   display: -webkit-box;
@@ -509,6 +510,21 @@ ul {
   cursor: pointer;
   background: -webkit-gradient(linear, left top, left bottom, from(#ee344a), to(#cc172d));
   background: linear-gradient(#ee344a, #cc172d);
+  padding: 0.4em 1em 0.5em 1em;
+  display: block;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.green-button {
+  font-size: 0.8em;
+  text-transform: uppercase;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
+  letter-spacing: 1px;
+  color: #1d2329;
+  cursor: pointer;
+  background: -webkit-gradient(linear, left top, left bottom, from(#9ef34e), to(#81d82f));
+  background: linear-gradient(#9ef34e, #81d82f);
   padding: 0.4em 1em 0.5em 1em;
   display: block;
   border: 1px solid rgba(255, 255, 255, 0.2);
@@ -680,5 +696,231 @@ ul {
 .message-success {
   background-color: #9ef34e;
   color: #1d2329;
+}
+
+.content {
+  width: 100%;
+  min-height: 70vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.content-inner {
+  width: 90%;
+  max-width: 1100px;
+  display: block;
+  margin: 0 auto;
+  padding: 2em;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.content-inner .message {
+  margin-bottom: 2em;
+}
+
+.content-inner .red-button, .content-inner .green-button {
+  margin: 0.2em 0.3em;
+  font-size: 0.7em;
+}
+
+table.dataTable thead th, table.dataTable tfoot th {
+  font-weight: 300;
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+  font-size: 0.9em;
+}
+
+.dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper .dataTables_paginate {
+  color: #feffd0;
+  font-size: 0.8em;
+}
+
+table.dataTable tbody tr {
+  background: -webkit-gradient(linear, left top, left bottom, from(#000000), to(#1d2329));
+  background: linear-gradient(#000000, #1d2329);
+}
+
+.dataTables_wrapper .dataTables_length select {
+  color: #bdbdbd;
+}
+
+.dataTables_wrapper .dataTables_filter input {
+  color: #ffffff;
+}
+
+table.dataTable.no-footer {
+  padding: 2em 0;
+}
+
+table.dataTable tbody th, table.dataTable tbody td {
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.header-navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header-navigation a {
+  font-size: 0.9em;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding: 0.2em 1em;
+  color: #ffffff;
+}
+
+.header-navigation a:not(:last-child) {
+  border-right: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.header-navigation a i {
+  margin-right: 0.3em;
+  opacity: 0.7;
+  color: #feffd0;
+}
+
+td form {
+  display: inline-block;
+}
+
+.setting {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.setting .setting-heading {
+  font-size: 1.4em;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-family: 'Oswald', sans-serif;
+  color: #ee344a;
+  position: relative;
+  display: inline-block;
+  margin-top: 0.5em;
+}
+
+.setting .setting-heading::before {
+  content: "";
+  width: 1em;
+  height: 4px;
+  background-color: #ee344a;
+  position: absolute;
+  top: 50%;
+  right: -1.4em;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.setting .setting-input-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 1em 0;
+}
+
+.setting .setting-input-row label {
+  font-weight: 400;
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 0.9em;
+  opacity: 0.8;
+  margin-bottom: 0.4em;
+}
+
+.setting .setting-input-row i {
+  color: #feffd0;
+  opacity: 0.8;
+  margin-right: 0.2em;
+}
+
+.setting .setting-input-row input {
+  font-size: 1.1em;
+  font-family: inherit;
+  font-weight: 400;
+  padding: 0.5em 1em;
+  color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  outline: none;
+}
+
+.setting .setting-input-row input:focus {
+  border-color: #ee344a;
+}
+
+.setting .setting-input-button {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.setting .setting-input-button button {
+  font-size: 0.9em;
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: #f3f3f3;
+  background: -webkit-gradient(linear, left top, left bottom, from(#ee344a), to(#cc172d));
+  background: linear-gradient(#ee344a, #cc172d);
+  padding: 0.4em 1em 0.5em 1em;
+  display: block;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  cursor: pointer;
+  outline: none;
+}
+
+.popup {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: 3;
+  background-color: rgba(0, 0, 0, 0.5);
+  left: 0;
+  top: 0;
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: 0.2s all;
+  transition: 0.2s all;
+}
+
+.popup-content {
+  width: 90%;
+  max-width: calc(400px + 4em);
+  height: auto;
+  background-color: #ffffff;
+  margin: 0 auto;
+  padding: 2em;
+}
+
+.popup.active {
+  opacity: 1;
+  pointer-events: all;
 }
 /*# sourceMappingURL=style.css.map */
